Soumission de la version finale du jalon2

--- a/travail/jalon2/Makefile
+++ b/travail/jalon2/Makefile
@@ -1,13 +1,13 @@
 CC = gcc
-CFLAGS = -Wall
+CFLAGS = -Wall -g -Wno-switch
 
 all: server client
 
 server: server.c
-	@$(CC) $(CFLAGS) -o server server.c
+	$(CC) $(CFLAGS) -o server server.c
 
 client: client.c
-	@$(CC) $(CFLAGS) -o client client.c
+	$(CC) $(CFLAGS) -o client client.c
 
 clean:
 	rm -f server client
